# angle-build

./: .gitignore  build.sh  package.sh  release-linux-arm64.gn  release-linux-x64.gn  release-osx-arm64.gn  release-osx-x64.gn  release-windows-x64.gn  start-buildenv.sh
.github/gradle/: build.gradle  publish.gradle  settings.gradle
.github/scripts/: create-empty-jars.sh  resolve-publish-env.sh
.github/workflows/: build.yml  quick-publish-test.yml
patches/: 0001-linux-prefer-vulkan-default-display.patch
